--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,16 @@ dependencies:
   firebase_messaging: ^8.0.0-dev.14
   firebase_analytics: "^7.0.1"
   firebase_crashlytics: "^0.4.0+1"
+  firebase_auth: "^0.20.0+1"
+  #OAUTH providers
+  flutter_signin_button: ^1.1.0
+
+  #Google OAUTH
+  google_sign_in: "^4.5.1"
+  #Apple OAUTH
+  sign_in_with_apple: ^2.5.2
+  crypto: ^2.1.5
+
   #Local notification
   flutter_local_notifications: ^4.0.1
 
@@ -56,7 +66,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - config/
+    - assets/config/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
