--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   #Firebase plugins
   firebase_core: "^0.7.0"
-  firebase_messaging: ^8.0.0-dev.14
+  firebase_messaging: ^8.0.0-dev.15
   firebase_analytics: "^7.0.1"
   firebase_crashlytics: "^0.4.0+1"
-  firebase_auth: "^0.20.0+1"
+  firebase_auth: "^0.20.1"
   #OAUTH providers
   flutter_signin_button: ^1.1.0
 
@@ -40,15 +42,21 @@ dependencies:
   crypto: ^2.1.5
 
   #Local notification
-  flutter_local_notifications: ^4.0.1
+  flutter_local_notifications: ^4.0.1+1
 
   #State and routing
   get: ^3.25.4
-  get_storage:
+  get_storage: null
+
+  #SVG
+  flutter_svg: ^0.19.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+dependency_overrides:
+  intl: ^0.17.0-nullsafety.2
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +64,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -68,13 +75,10 @@ flutter:
   assets:
     - assets/config/
     - assets/images/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -94,3 +98,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
+  class_name: LangTranslator
