--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -30,3 +30,6 @@ Runner/GeneratedPluginRegistrant.*
 !default.mode2v3
 !default.pbxuser
 !default.perspectivev3
+
+#Google Services
+/**/**/GoogleService-info.plist
